--- a/resources/sass/components/foodFiltersAndMenu.scss
+++ b/resources/sass/components/foodFiltersAndMenu.scss
@@ -1,4 +1,9 @@
-.foodAttributesWrapper #food-attribute-filters{
+.foodAttributesWrapper #food-attribute-filters {
   display: flex;
   justify-content: center;
+}
+
+.menu-elements-wrapper {
+  margin: 0 auto;
+  margin-top: 5px;
 }
