--- a/resources/sass/components/itemBlocks.scss
+++ b/resources/sass/components/itemBlocks.scss
@@ -1,14 +1,15 @@
 #all-food-items-wrapper > section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: block !important;
 }
 
 .oneItem {
-  background-color: rgba(42, 43, 60, 1);
+  background-color: #191919;
   width: 590px;
   height: 185px;
   margin: 10px;
+  width: auto;
+  height: auto;
+  display: flex;
 
   * {
     font-family: 'Indie Flower', cursive;
@@ -29,6 +30,12 @@
     font-size: 19px;
     letter-spacing: 1.2px;
     color: rgb(63, 126, 236);
+    width: 250px;
+  }
+
+  .itemName, .detailsWrapper, .itemData {
+    align-self: center;
+    margin: 5px;
   }
 
   li {
@@ -41,31 +48,35 @@
   }
 
   .itemData {
-    padding:10px;
+    padding: 10px;
 
-    color: white;
     font-size: 17px;
     color: #7aa882;
     font-weight: 100;
+
+    margin-left: auto !important;
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
   }
 
-  .rarityRare{
+  .rarityRare {
     color: #ffd73a;
   }
 
-  .rarityBasic{
+  .rarityBasic {
     color: #e8e2ff;
   }
 
-  .rarityFine{
+  .rarityFine {
     color: #2544ff;
   }
 
-  .rarityExotic{
+  .rarityExotic {
     color: #ff640d;
   }
 
-  .rarityMasterwork{
+  .rarityMasterwork {
     color: #068900;
   }
 
